--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@blueprintjs/icons": "^3.10.0",
     "@datapunt/matomo-tracker-react": "0.0.16",
     "@plone/volto": "github:eea/volto#kitchen_sink",
+    "axios": "^0.19.2",
     "http-server": "^0.12.1",
     "immutable": "^3.8.2",
     "less-loader": "5.0.0",
